XSensor/Peloton-20220817/Peloton-20220817/XSCore90.h

// 8 bits
//typedef uint8_t XBOOL;
typedef bool XBOOL;
enum XBOOL_VALUES
{
	xFALSE = false,
	xTRUE = true
};
// 64 bits
typedef uint64_t SENSORPID;
enum EPressureUnit
{
	ePRESUNIT_MMHG = 0,	// millimeters of mercury
	ePRESUNIT_INH2O,	// inches of water
	ePRESUNIT_PSI,		// pounds/sq.inch
	ePRESUNIT_KPA,		// kilopascals
	ePRESUNIT_KGCM2,	// kgf/cm^2
	ePRESUNIT_ATM,		// atmospheres
	ePRESUNIT_NCM2,		// newtons/cm^2
	ePRESUNIT_MBAR,		// millibars
	ePRESUNIT_NM2,		// Newton/meter^2
	ePRESUNIT_GCM2,		// grams/cm^2
	ePRESUNIT_BAR,		// bar

	ePRESUNIT_RAW = 255
};
// Returns the last error codes in the form of an ASCII English string.

extern "C" XSCORE_API XBOOL XS_InitLibrary(XBOOL bThreadMode);
// Constructions a sensor configuration using all found sensors. Default calibration pressure ranges are utilized.
// This function sets the pressure units to ePRESUNIT_MMHG! Be sure to call XS_SetPressureUnit() after calling this function.
// 
// The XSN variant function takes a full file path and filename to construct an XSENSOR session file from all recorded frames.
//
// Example:  
//  wchar_t* szPath[] = L"c:\\mysessions\\session5.xsn";
//	XS_AutoConfigByDefaultXSN(szPath);
//  
// *OR*
//  char_t* szPath[] = "c:\\mysessions\\session5.xsn";
//	XS_AutoConfigByDefaultXSNUTF8(szPath);
//
// Returns xTRUE if the call succeeds.


extern "C" XSCORE_API XBOOL XS_AutoConfig(uint8_t pressureUnits = ePRESUNIT_MMHG, float targetPressure = -1.0f);
// Similar to XS_AddSensorToConfig_AutoCal(), but attempts to use the default pressure range for the sensor.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_ConfigComplete();
// Indicates whether the IMU enable flag is set. (Does not indicate whether IMU is supported!)


extern "C" XSCORE_API void XS_SetStreamingMode(XBOOL bStreaming, uint16_t streamingMaxFrameCache);
// Streaming mode buffers all incoming frames and releases them with each XS_Sample() call.
// When streaming mode is off, sensors are sampled at the time XS_Sample is called.
//
// NOTE: When streaming mode is on, the DLL will allocate large amounts of buffer memory if the samples are not
// consumed fast enough.
//
// The streamingMaxFrameCache parameter determines how many frames the streaming mode buffers. This is the cache limit.
// If streamingMaxFrameCache is set to zero, then the DLL caches all frames until it runs out of memory.
// If streamingMaxFrameCache is non-zero, the DLL discards older frames once the cache limit is reached.

extern "C" XSCORE_API XBOOL XS_GetStreamingMode();
// Returns xTRUE if streaming mode is on, xFALSE otherwise.  This is off by default.


extern "C" XSCORE_API void XS_SetSampleAverageCount(uint16_t nCount);
// Set the number of per-sensel readings that are averaged together per sensel scan.
// 
// This averaging occurs within the sensor's DSP hardware. Higher cycles lead to slower
// frame rates but may result in a better signal-to-noise ratio.
//
// Valid X3 numbers are 1, 2, 4, 8 and 16.
// X4 sensors can only run at 4 and 8 cycles. X4 foot sensors run fastest with 4 cycles.
//
// This value can only be set before calling any of the XS_AutoConfig* functions or XS_ConfigComplete().
// Typically, this value does not need to be set as the sensor is normally programmed with an expected default.

extern "C" XSCORE_API uint16_t XS_GetSampleAverageCount();
// Get the number of per-sensel readings that are averaged together per sensel scan.


// ===========================================================================
//	Connection Management
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_OpenConnection(uint32_t nThreadedFramesPerMinute=0);
// Opens all configured sensors and begins sampling.
//
// Call this only after calling XS_ConfigComplete() or XS_AutoConfig*().
//
// nThreadedFramesPerMinute
//	- When using the DLL in threaded mode (ie: XS_InitLibrary(xTRUE)),
//    this specifies the target framerate in frames per minute. eg: 600 FPM = 10 Hz
//
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_IsConnectionOpen();
// returns xTRUE if the connection is open.
//
// Typically, this function returns xFALSE when a sensor is disconnected, or
// a sensor is in use by another program.

extern "C" XSCORE_API XBOOL XS_CloseConnection();
// Stops all sampling and closes the sensor connections.
//
// If the sensor configuration is using an XSN file, then that file stays open. 
// Subsequent calls to XS_OpenConnection continue to write to the same XSN file.
//
// To close the XSN file, call XS_ReleaseConfig.


extern "C" XSCORE_API XBOOL XS_IsConnectionThreaded();
// Returns xTRUE if the connection is open and the connection is running in an asynchronous threaded mode.


// ===========================================================================
//	Sampling
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_SetNoiseThreshold(float threshold);
// Any pressure readings below this noise threshold are zeroed. The threshold is applied
// to all configured sensors.
//
// The default threshold is normally the lowest calibrated pressure of all configured sensors.
//
// threshold - The threshold should be in the active pressure units. (see XS_GetPressureUnit)

extern "C" XSCORE_API float XS_GetNoiseThreshold();
// Returns the threshold below which pressure is zeroed.
// If -1.0 is returned, this indicates the function failed. Check XS_GetLastErrorCode.

extern "C" XSCORE_API XBOOL XS_Sample();
// Ask the configured sensors to record a new sample to an internal buffer.
// Use XS_GetPressure() to retrieve the pressure map from the internal buffer.
//
// When using the library in a threaded mode, this call returns immediately. 
// However, the internal buffer may or may not have a new sample as it only updates
// when a new one is available. Check the timestamp to see if it has changed.
//
// When using the library in an un-threaded mode, this call blocks until a sample is recorded or
// a read timeout occurs.
// 
// Returns xTRUE if the call succeeds. Note this does not necessarily mean there is a new sample ready. Be sure to check timestamps!

extern "C" XSCORE_API XBOOL XS_GetSampleTimestampUTC(
	uint16_t& year, uint8_t& month, uint8_t& day, 
	uint8_t& hour, uint8_t& minute, uint8_t& second, uint16_t& millisecond);
// Fetch the timestamp of the last sample collected.
// Components are normal UTC ranges. month (1-12), day (1-31). Hour is (0-23), minute and second (0-59), millisecond (0-999)

extern "C" XSCORE_API XBOOL XS_GetSampleTimeUTC(SYSTEMTIME & tTime);
// Fetch the timestamp of the last sample collected.
// Similar to XS_GetSampleTimestampUTC, but using the Win32 structure SYSTEMTIME.

extern "C" XSCORE_API XBOOL XS_GetSampleTimestampExUTC(
	uint16_t& year, uint8_t& month, uint8_t& day, 
	uint8_t& hour, uint8_t& minute, uint8_t& second, 
	uint16_t& millisecond, uint16_t& microsecond, bool bAsLocalTime);
// Fetch the timestamp of the last sample collected.
// Includes microseconds when supported by the sensor hardware.
// This version allows conversion of the timestamp to the local time zone.


extern "C" XSCORE_API XBOOL XS_GetPressure(SENSORPID spid, float* pData);
// Retrieves the calibrated sample data for a single sensor. 
//
// (Call XS_Sample once for all sensors before calling XS_GetPressure for each sensor.)
//
// The pressure readings are in the units set by XS_SetPressureUnit() or XS_AutoConfig().
//
// pData 
//	- pass in a pre-allocated buffer which is larger enough to hold (rows X columns) elements, each 32-bits.
//	- rows and columns are the dimensions of the sensor.
//	- The array is organized in a typical row-major order. IE: The first N values in the array correspond 
//		to the first row, where N is the number of columns.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetPressureSafe(SENSORPID spid, uint32_t dataCount, float data[]);
// This version takes a preallocated buffer of floats (32-bit).
// dataCount is the number of elements in the data[] array.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetRaw(SENSORPID spid, uint16_t* pData);
// Similar to XS_GetPressure(), except it takes an array of uint16_t and returns uncalibrated raw 16 bit values from the sensor.
// Returns xTRUE if the call succeeds.


extern "C" XSCORE_API XBOOL XS_GetRawSafe(SENSORPID spid, uint32_t dataCount, uint16_t data[]);
// This version takes a preallocated buffer of uint16_t (16-bit).
// dataCount is the number of elements in the data[] array.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetIMU(
	SENSORPID spid,
	float& qx, float& qy, float& qz, float& qw,
	float& ax, float& ay, float& az,
	float& gx, float& gy, float& gz);
// Fetches the IMU data (if any) for the current Sample

extern "C" XSCORE_API XBOOL XS_GetHardwareFrameState(
	SENSORPID spid,
	uint32_t& sequence, uint32_t& ticks);
// Retrieves the hardware frame header state. 'sequence' increments for each frame. 'ticks' is milliseconds for X4
// returns xFALSE if there is no hardware state, or an error has occurred

extern "C" XSCORE_API float* XS_AllocPressureBuffer(SENSORPID spid);
// Allocate a buffer for accessing the pressure values. Use this for multiple readings.
// The DLL will allocate enough memory to hold all rows and columns of the sensor.
// Returns 0 if the SENSORPID is invalid or the system is low in memory.

extern "C" XSCORE_API void XS_ReleasePressureBuffer(float* pBuffer);
// Releases the DLL allocated buffer.

extern "C" XSCORE_API uint16_t * XS_AllocRawBuffer(SENSORPID spid);
// Allocate a buffer for accessing the raw values. Use this for multiple readings.
// The DLL will allocate enough memory to hold all rows and columns of the sensor.
// Returns 0 if the SENSORPID is invalid or the system is low in memory.

extern "C" XSCORE_API void XS_ReleaseRawBuffer(uint16_t * pBuffer);
// Releases the DLL allocated buffer.


XSCORE_API XBOOL XS_GetDeadMap(SENSORPID spid, uint8_t* pData);
// Maps out the sensels that are dead and alive.  1 = dead, 0 = alive
// Only profiles that mask out dead cells in the grid will have this. (ie: X4 foot sensors)
// "uint8_t* pData" should be allocated with space for ROWS x COLUMNS for the target sensor


// ===========================================================================
//	Frame Statistics
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_CenterOfPressure(SENSORPID spid, float zeroThreshold, float& column, float& row);
// Converts a UTF8 (or plain ASCII) string to wide format (wchar_t). You must supply a wchar_t* buffer that is large enough to hold the converted string.
// The string is expected to be null (zero) terminated.
//
// const char* utf8
//  - the utf8/ASCII string to convert
// 
// uint32_t& bufferSize 
//	- returns the size of the buffer (in byte count) needed to hold the conversion. wchar_t uses 2 bytes per character.
//  -  (eg: If bufferSize == 100, then  wchar_t wide[50]  will hold the string.
//  - If wide is not null, pass in the wide's buffer size (in bytes) in this field to allow for an extra buffer safety check.
// 
// wchar_t* wide 
//	- the buffer to hold the wide string. Pass in nullptr (or 0) to retrieve just the size of the buffer (in bytes) required in bufferSize.



// ===========================================================================
//	X3 PRO HUB - External Sync - X3 sensors only
// ===========================================================================

// Enables the external sync trigger.  Once enabled, the XS_Sample() function will
// block until the X3 PRO hub receives a signal, or the read-timeout timer expires.
//
// The hub allows two types of synchronization: "trigger start of streaming" and 
// "trigger single frame".
// 
// There are two types of triggers and only one may be enabled at a time
// 
// Enabling
// one trigger automatically disables the other trigger.


// NOTE: Be sure to set a ReadTimeout period that is larger than your expected trigger
//       frequency.
//

// For reference, here are the operational specs for the external sync port:
//
// The sync connector is a 3.5mm stereo jack.  Position 1 is GND, position 2 is the sync voltage.
// The voltage is LV TTL (0 to 3.6V max).  Higher voltages are possible by using
// an external series resistor in line with the sync voltage.
//
// The following equation can be used to calculate the series resistor value:
// 
// Rseries = Vsync*75 - 264

extern "C" XSCORE_API XBOOL XS_IsRecordTrigger_FirstFrameOnly();
// Returns xTRUE if this trigger is enabled.

extern "C" XSCORE_API void XS_EnableRecordTrigger_FirstFrameOnly(XBOOL bEnable);
// The "FirstFrameOnly" trigger blocks the XS_Sample() command until the XS PRO
// hub is signaled on the external sync port.  Subsequent calls to XS_Sample()
// return immediately with a collected sample.

extern "C" XSCORE_API XBOOL XS_IsRecordTrigger_EachFrame();
// Returns xTRUE if this trigger is enabled.

extern "C" XSCORE_API void XS_EnableRecordTrigger_EachFrame(XBOOL bEnable);