XSensor/ToS/XSCore90.py


# XS_SetStreamingMode
# If you are sampling < 10 Hz, set this mode to false, otherwise set to true for better sample rates
# void XS_SetStreamingMode(XBOOL bStreaming);
XS_SetStreamingMode = libXSC.XS_SetStreamingMode
XS_SetStreamingMode.argtypes = [ctypes.c_ubyte]
# has no return value XS_SetStreamingMode.restype = ctypes.c_ubyte

# XS_GetStreamingMode
# returns true (non-zero) if streaming mode is on, false otherwise.  This is off by default.
# XBOOL XS_GetStreamingMode();
XS_GetStreamingMode = libXSC.XS_GetStreamingMode
XS_GetStreamingMode.restype = ctypes.c_ubyte


# XS_SetSampleAverageCount
# Set the number of readings the hardware will perform on each sensel.
# Valid numbers are 1, 2, 4, 8 and 16
#
# This averaging occurs within the sensor's DPS hardware. Higher cycles lead to slower
# frame rates, but may produce more accurate readings.
#
# X4 sensors can only run at 4 and 8 cycles. X4 foot sensors run fastest with 4 cycles.
#
# This value can only be set before calling any of the XS_AutoConfig* functions, or XS_ConfigComplete()
# Typically you don't need to set this as the sensor is normally programmed with an expected default.
# void XS_SetSampleAverageCount(uint16_t nCount);
XS_SetSampleAverageCount = libXSC.XS_SetSampleAverageCount
XS_SetSampleAverageCount.argtypes = [ctypes.c_ushort]

# XS_GetSampleAverageCount
# returns the number of readings the hardware will perform on each sensel.  Each reading is
# averaged together.  Default is 1 which means no averaging.  Hardware supports: 1,2,4,8,16 samples being averaged.
# uint16_t XS_GetSampleAverageCount();
XS_GetSampleAverageCount = libXSC.XS_GetSampleAverageCount
XS_GetSampleAverageCount.restype = ctypes.c_ushort


# C functions not presently supported (2021-03-12)
# XS_AllocPressureBuffer
# XS_ReleasePressureBuffer
# XS_AllocRawBuffer
# XS_ReleaseRawBuffer


# ===========================================================================
#	Connection management
# ===========================================================================

# XS_OpenConnection
# opens the sensors in the sample configuration and readies them for sampling
# Call this only after a call to XS_ConfigComplete() or XS_AutoConfig*()
#
# nThreadedFramesPerMinute
#	- When using the DLL in threaded mode (ie: XS_InitLibrary(TRUE)),
#    this specifies the target frame rate. eg: 10 Hz = 600 FPM
#    Actual rate may be slower depending on the sensor configuration and
#    the PC's USB subsystem. This field is ignored when XS_InitLibrary(FALSE)
#	  is called.
#XBOOL XS_OpenConnection(uint32_t nThreadedFramesPerMinute=0);
XS_OpenConnection = libXSC.XS_OpenConnection
XS_OpenConnection.argtypes = [ctypes.c_uint]
XS_OpenConnection.restype = ctypes.c_ubyte


# XS_IsConnectionOpen
# returns 1 if the connection is open
# XBOOL XS_IsConnectionOpen();
XS_IsConnectionOpen = libXSC.XS_IsConnectionOpen
XS_IsConnectionOpen.restype = ctypes.c_ubyte

# XS_IsConnectionThreaded
# returns 1 if the connection is open and the connection is running in an asynchronous threaded mode.
# XBOOL XS_IsConnectionThreaded();
XS_IsConnectionThreaded = libXSC.XS_IsConnectionThreaded
XS_IsConnectionThreaded.restype = ctypes.c_ubyte


# XS_CloseConnection
# closes the connection - this releases the sensors and allows other applications to talk to them.
# XBOOL XS_CloseConnection();
XS_CloseConnection = libXSC.XS_CloseConnection
XS_CloseConnection.restype = ctypes.c_ubyte


# ===========================================================================
#	Sampling functions
# ===========================================================================

# XS_GetNoiseThreshold
# Returns the threshold below which pressure is zeroed.
# float XS_GetNoiseThreshold();
XS_GetNoiseThreshold = libXSC.XS_GetNoiseThreshold
XS_GetNoiseThreshold.restype = ctypes.c_float

# XS_SetNoiseThreshold
# sets a pressure threshold. Any readings below this threshold are zeroed.
# XBOOL XS_SetNoiseThreshold(float nThreshold);
XS_SetNoiseThreshold = libXSC.XS_SetNoiseThreshold
XS_SetNoiseThreshold.argtypes = [ctypes.c_float]
XS_SetNoiseThreshold.restype = ctypes.c_ubyte


# XS_Sample
# Ask the sensor(s) to record a sample.
# Returns 1 if a sample is collected, 0 otherwise
# XBOOL XS_Sample();
XS_Sample = libXSC.XS_Sample
XS_Sample.restype = ctypes.c_ubyte

# XS_GetSampleTimestampUTC
# Fetch the timestamp components (UTC time). month (1-12), day (1-31). Hour is (0-23), minute and second (0-59), millisecond (0-999)
# XBOOL XS_GetSampleTimestampUTC(uint16_t& year, uint8_t& month, uint8_t& day, uint8_t& hour, uint8_t& minute, uint8_t& second, uint16_t& millisecond);
XS_GetSampleTimestampUTC = libXSC.XS_GetSampleTimestampUTC
XS_GetSampleTimestampUTC.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p]
XS_GetSampleTimestampUTC.restype = ctypes.c_ubyte

# XS_GetSampleTimestampExUTC
# includes microseconds when supported by the sensor hardware. This version allows conversion of the timestamp to the local timezone.
# XBOOL XS_GetSampleTimestampExUTC(
#	uint16_t& year, uint8_t& month, uint8_t& day, 
#	uint8_t& hour, uint8_t& minute, uint8_t& second, uint16_t& millisecond, uint16_t& microsecond, bool bAsLocalTime);
XS_GetSampleTimestampExUTC = libXSC.XS_GetSampleTimestampExUTC
XS_GetSampleTimestampExUTC.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ubyte]
XS_GetSampleTimestampExUTC.restype = ctypes.c_ubyte

# C functions not presently supported (2021-03-12)
# XBOOL XS_GetSampleTimeUTC(SYSTEMTIME& tTime);

# XS_GetPressure
# Retrieves the sensor sample data for a single sensor.
# The expected pData buffer format is rows * columns * sizeof(uint16_t), where rows and columns are the dimensions of the sensor.
# XBOOL XS_GetPressure(SENSORPID spid, float* pData);
XS_GetPressure = libXSC.XS_GetPressure
XS_GetPressure.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p]
XS_GetPressure.restype = ctypes.c_ubyte

# XS_GetPressureSafe
# This version takes a preallocated buffer of floats (32 bit) whose size is dataSize.
# dataSize is the number of elements in the data[] array
# XBOOL XS_GetPressureSafe(SENSORPID spid, uint32_t dataSize, float data[]);
XS_GetPressureSafe = libXSC.XS_GetPressureSafe
XS_GetPressureSafe.argtypes = [ctypes.c_ulonglong, ctypes.c_uint, ctypes.c_void_p]
XS_GetPressureSafe.restype = ctypes.c_ubyte

# XS_GetRaw
# Retrieves the raw sample data for a single sensor.
# The expected pData buffer format is rows * columns * sizeof(ushort), where rows and columns are the dimensions of the sensor.
# XBOOL XS_GetRaw(SENSORPID spid, uint16_t* pData);
XS_GetRaw = libXSC.XS_GetRaw
XS_GetRaw.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p]
XS_GetRaw.restype = ctypes.c_ubyte

# XS_GetRawSafe
# This version takes a preallocated buffer whose size is specified with dataSize.
# XBOOL XS_GetRawSafe(SENSORPID spid, uint32_t dataSize, uint16_t data[]);
# dataSize is the number of elements in the data[] array
XS_GetRawSafe = libXSC.XS_GetRawSafe
XS_GetRawSafe.argtypes = [ctypes.c_ulonglong, ctypes.c_uint, ctypes.c_void_p]
XS_GetRawSafe.restype = ctypes.c_ubyte

# XS_GetIMU
# XBOOL XS_GetIMU(
#	SENSORPID spid,
#	float& qx, float& qy, float& qz, float& qw,
#	float& ax, float& ay, float& az,
#	float& gx, float& gy, float& gz);
# Fetches the IMU data (if any) for the current Sample
XS_GetIMU = libXSC.XS_GetIMU
XS_GetIMU.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p]
XS_GetIMU.restype = ctypes.c_ubyte

# XS_GetHardwareFrameState
# XBOOL XS_GetHardwareFrameState(SENSORPID spid, uint32_t& sequence, uint32_t& ticks);
# Retrieves the hardware frame header state. 'sequence' increments (and wrapsaround) for each frame. 'ticks' is milliseconds for X4
# returns xFALSE if there is no hardware state, or an error has occured
XS_GetHardwareFrameState = libXSC.XS_GetHardwareFrameState
XS_GetHardwareFrameState.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_GetHardwareFrameState.restype = ctypes.c_ubyte


# XS_CenterOfPressure
# Computes the center of pressure (COP) and returns its column and row coordinates.
# Returns negative coordinates if there is a problem. Call XSN_GetLastErrorCode() if that occurs.
#
# The center of pressure calculation ignores pressure which is below the zero threshold.
# zeroThreshold is assumed to be in the same pressure units as the current settings.
#
# Row coordinates are from 1 to XSN_Rows()
# Column coordinates are from 1 to XSN_Columns()
#
# Whole numbers (no fractions) indicate the COP is over the center of the sensel.
#
# The fractional part of the coordinate indicates a normalized distance between
# the centers of two sensels.
#
# Example
# Suppose the function returns these values: column = 1.53f; row = 2.25f.
# This means the COP is 53% of the distance between the center of column 1 and
# the center of column 2. The COP is 25% of the distance between the center
# of row 2 and the center of row 3. (It is closer to row 2).
# XBOOL XS_CenterOfPressure(SENSORPID spid, float zeroThreshold, float& column, float& row);
XS_CenterOfPressure = libXSC.XS_CenterOfPressure
XS_CenterOfPressure.argtypes = [ctypes.c_ulonglong, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p]
XS_CenterOfPressure.restype = ctypes.c_ubyte


# C functions not presently supported (2021-03-12)
# XS_GetDeadMap


# ===========================================================================
#	External Sync port triggers - X3 PRO HUB sensor only
# ===========================================================================

# C functions not presently supported (2021-03-12)
# XS_IsRecordTrigger_FirstFrameOnly
# XS_EnableRecordTrigger_FirstFrameOnly
# XS_IsRecordTrigger_EachFrame
# XS_EnableRecordTrigger_EachFrame

# ===========================================================================
# END OF FILE
# ===========================================================================
